feat(component): introduce options for component

--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -88,7 +88,13 @@ const getValueFromData = (name, property = '') => {
                         <div data-popup-overflow>
                             <div data-popup-overlay data-toggle="component-panel"></div>
                             <div data-pb-component-popup-inner data-popup-inner="">
+                                <!-- component content -->
                                 <div data-pb-component-popup-content></div>
+
+                                <!-- component options -->
+                                <div data-pb-component-options></div>
+
+                                <!-- button group -->
                                 <button type="button" data-toggle="component-panel" data-pb-component-popup-save>Save
                                 </button>
                                 <button type="button" data-toggle="component-panel">Cancel</button>
