feat(image-component): clarify single or multiple

--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -1,8 +1,10 @@
 <%
 const id = (new Date()).getTime().toString(36) + Math.random().toString(36).slice(2)
+const validatedOptions = options || ''
 %>
 
-<div data-type="<%= type %>" data-param="<%= paramName; %>" class="<%= classesName; %>" data-id="<%= id %>">
+<div data-type="<%= type %>" data-param="<%= paramName; %>" class="<%= classesName; %>" data-id="<%= id %>"
+     data-options="<%= validatedOptions %>">
 
     <!-- show media popup button -->
     <div>Media here</div>
