chore(posts): change time format

--- a/core/views/custom-type/posts/index.ejs
+++ b/core/views/custom-type/posts/index.ejs
@@ -3,8 +3,8 @@
 const modifyDate = (publishTime) => {
     const year = publishTime.getFullYear()
     const month = (publishTime.getMonth() + 1).toString().padStart(2, '0')
-    const date = publishTime.getDate()
-    const hour = publishTime.getHours()
+    const date = publishTime.getDate().toString().padStart(2, '0')
+    const hour = publishTime.getHours().toString().padStart(2, '0')
     const minute = publishTime.getMinutes().toString().padStart(2, '0')
     return `${date}/${month}/${year} at ${hour}:${minute}`
 }
