chore(header): change time format

--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -11,7 +11,7 @@
     </div>
     <div class="admin__panel--right">
         <div class="admin-panel__account">
-            <p>Hello <%= user.name %></p>
+            <p>Hola, <%= user.name %></p>
         </div>
     </div>
 </div>
