--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -109,15 +109,22 @@ const getValueFromData = (name, property = '') => {
                 <div class="posts-detail__visibility">
                     <label for="visibility">Visibility</label>
                     <select name="visibility" id="visibility">
-                        <option <%= isSelectedValue('visibility', 'public') ;%> value="public">Public
+                        <option <%= isSelectedValue('visibility', 'public'); %> value="public">Public
                         </option>
-                        <option <%= isSelectedValue('visibility', 'private') ;%> value="private">Private
+                        <option <%= isSelectedValue('visibility', 'private'); %> value="private">Private
                         </option>
                     </select>
                 </div>
                 <div class="posts-detail__template">
                     <label for="template">Template</label>
                     <select name="template" id="template">
+                        <%-
+                        templates.map(template => {
+                            const isSelected = isSelectedValue('template', template.name);
+                            return `
+<option value="${template.name}" ${isSelected || ''}>${template.prettyName}</option>`;
+                        }).join('');
+                        %>
                     </select>
                 </div>
                 <button type="submit">Publish</button>
