--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -115,18 +115,20 @@ const getValueFromData = (name, property = '') => {
                         </option>
                     </select>
                 </div>
-                <div class="posts-detail__template">
-                    <label for="template">Template</label>
-                    <select name="template" id="template">
-                        <%-
-                        templates.map(template => {
-                            const isSelected = isSelectedValue('template', template.name);
-                            return `
+                <% if (typeof templates !== "undefined" && templates.length) { %>
+                    <div class="posts-detail__template">
+                        <label for="template">Template</label>
+                        <select name="template" id="template">
+                            <%-
+                                templates.map(template => {
+                                    const isSelected = isSelectedValue('template', template.name);
+                                    return `
 <option value="${template.name}" ${isSelected || ''}>${template.prettyName}</option>`;
-                        }).join('');
-                        %>
-                    </select>
-                </div>
+                                }).join('');
+                            %>
+                        </select>
+                    </div>
+                <% } %>
                 <button type="submit">Publish</button>
             </div>
         </div>
