--- a/views/register/type/sign-up.ejs
+++ b/views/register/type/sign-up.ejs
@@ -1,4 +1,4 @@
-<form method="post" action="?type=<%= type %>&method=post&getJSON=true">
+<form method="post" action="?type=<%= type %>&method=post">
 
     <!-- username -->
     <div>
