feat(media): introduce preview media

--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -7,7 +7,7 @@ const validatedOptions = options || ''
      data-options="<%= validatedOptions %>">
 
     <!-- show media popup button -->
-    <div>Media here</div>
+    <div data-selected-medias></div>
     <button data-param-value data-load-media type="button" data-custom-toggle="<%= id %>" class="button-style">+
     </button>
 
