--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -33,14 +33,14 @@ const getValueFromData = (name, property = '') => {
 
                     <div class="posts-detail__title">
                         <label for="title" class="hidden">Add title</label>
-                        <input type="text" placeholder="Add title" id="title" name="title" required
+                        <input type="text" placeholder="Title" id="title" name="title" required
                                value="<%= getValueFromData('title') %>">
                     </div>
 
                     <% if (isEditPost) { %>
                         <div class="posts-detail__permalink">
                             <label for="permalink" style="margin-right:10px;">Permalink:</label>
-                            <input type="text" placeholder="permalink" id="permalink" name="url"
+                            <input type="text" placeholder="URL" id="permalink" name="url"
                                    value="<%= getValueFromData('url') %>">
                         </div>
                     <% } %>
