--- a/core/assets/styles/base/base.scss
+++ b/core/assets/styles/base/base.scss
@@ -6,15 +6,19 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   padding-top: var(--header-height);
-  min-height: 100vh;
   background-color: var(--bg-color);
+  min-height: 100vh;
 
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  font-size: 16px;
+  font-size: 1.6rem;
   color: var(--text-color);
 }
 
@@ -83,11 +87,9 @@ button:focus-visible {
 
 /* input */
 input {
-  min-height: 45px;
-  padding: 5px 10px;
+  min-height: 30px;
+  padding: 6px;
   border: 1px solid var(--color-secondary);
-  border-radius: 4px;
-  font-family: inherit;
   font-size: 16px;
   width: auto;
 }
