refactor(global-style): refactor

--- a/assets/global/style/index.scss
+++ b/assets/global/style/index.scss
@@ -1,3 +1,3 @@
-@import "reset";
-@import "atomic";
-@import "variables";
+@import "./base/reset";
+@import "./vendors/atomic";
+@import "./utils/variables";
