--- a/core/views/core-component-type/text.ejs
+++ b/core/views/core-component-type/text.ejs
@@ -1,5 +1,8 @@
-<div data-type="<%= type %>" data-param="<%= paramName; %>" class="<%= classesName; %>">
+<div data-type="<%= type; %>" data-param="<%= paramName; %>" class="<%= classesName; %>">
 
     <div data-param-value id="editor-container"></div>
-    <div class="description"> <%= description %></div>
+
+    <% if (description) { %>
+        <div class="description"><%= description %></div>
+    <% } %>
 </div>
