--- a/core/views/core-component-type/image.ejs
+++ b/core/views/core-component-type/image.ejs
@@ -1,6 +1,6 @@
 <%
-const id = (new Date()).getTime().toString(36) + Math.random().toString(36).slice(2)
-const validatedOptions = options || ''
+const id = (new Date()).getTime().toString(36) + Math.random().toString(36).slice(2);
+const validatedOptions = options || '';
 %>
 
 <div data-type="<%= type %>" data-param="<%= paramName; %>" class="<%= classesName; %>" data-id="<%= id %>"
