--- a/core/assets/styles/index.scss
+++ b/core/assets/styles/index.scss
@@ -12,6 +12,7 @@
 @import './components/sidebar';
 @import './components/custom-table';
 @import "./components/media-popup";
+@import "./components/page-builder";
 
 // pages
 @import "./pages/posts";
