--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -95,9 +95,14 @@ const getValueFromData = (name, property = '') => {
                                 <div data-pb-component-options></div>
 
                                 <!-- button group -->
-                                <button type="button" data-toggle="component-panel" data-pb-component-popup-save>Save
-                                </button>
-                                <button type="button" data-toggle="component-panel">Cancel</button>
+                                <div data-pb-component-button-group style="margin-top:auto;">
+                                    <button type="button" data-toggle="component-panel" data-pb-component-popup-save>
+                                        Save
+                                    </button>
+                                    <button type="button" data-toggle="component-panel" data-pb-component-popup-cancel>
+                                        Cancel
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
