--- a/core/assets/styles/components/popup.scss
+++ b/core/assets/styles/components/popup.scss
@@ -40,15 +40,17 @@
 
 // popup content
 [data-popup-inner] {
+  display: flex;
+  flex-direction: column;
+
   overflow: auto;
   width: 100%;
-  max-width: 1180px;
+  max-width: 1024px;
   min-height: 500px;
   position: relative;
   z-index: 999;
   background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
+  padding: 1.5rem;
   box-shadow: 3px 4px 12px rgba(0, 0, 0, 0.05);
 }
 
