feat(user): add popup user

--- a/core/assets/styles/components/popup.scss
+++ b/core/assets/styles/components/popup.scss
@@ -61,6 +61,7 @@ html[class*="-is-open"] {
 
 html:not(.component-panel-is-open) [data-pb-component-popup][data-popup],
 html:not(.components-is-open) [data-pb-components-popup][data-popup],
+html:not(.user-popup-is-open) [data-custom-table] [data-popup],
 html:not(.media-popup-is-open) [data-media-wrapper] [data-popup] {
   opacity: 0;
   visibility: hidden
