--- a/core/assets/styles/index.scss
+++ b/core/assets/styles/index.scss
@@ -18,6 +18,7 @@
 @import "./pages/posts";
 @import "./pages/posts-detail";
 @import "./pages/media";
+@import "./pages/user";
 
 // vendors
 @import './vendors/quill';
