--- a/core/assets/styles/index.scss
+++ b/core/assets/styles/index.scss
@@ -5,6 +5,7 @@
 @import "./base/base";
 @import "./utils/responsive";
 @import "./utils/mixins";
+@import "./utils/grid";
 
 // components
 @import './components/popup';
