--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -29,7 +29,7 @@ const getValueFromData = (name, property = '') => {
 
         <div class="posts-detail">
             <div class="posts-detail--left">
-                <div class="posts-detail__information" style="margin-bottom:20px;">
+                <div class="posts-detail__information">
 
                     <div class="posts-detail__title">
                         <label for="title" class="hidden">Add title</label>
@@ -39,7 +39,7 @@ const getValueFromData = (name, property = '') => {
 
                     <% if (isEditPost) { %>
                         <div class="posts-detail__permalink">
-                            <label for="permalink" style="margin-right:10px;">Permalink:</label>
+                            <label for="permalink" style="margin-right:10px;">Custom URL:</label>
                             <input type="text" placeholder="URL" id="permalink" name="url"
                                    value="<%= getValueFromData('url') %>">
                         </div>
