feat: introduce easy select

--- a/assets/global/style/index.scss
+++ b/assets/global/style/index.scss
@@ -1,3 +1,9 @@
+// base
 @import "./base/reset";
+
+// vendors
 @import "./vendors/atomic";
+@import './vendors/easy-select-custom';
+
+// utils
 @import "./utils/variables";
