--- a/core/assets/styles/components/popup.scss
+++ b/core/assets/styles/components/popup.scss
@@ -9,6 +9,7 @@
   transition-duration: 0.3s;
   transition-timing-function: ease;
   backdrop-filter: blur(5px);
+  z-index: 2;
 }
 
 [data-popup-overlay] {
